fix(Slickslider): Slick arrows position fixed on mobile

--- a/src/components/3-Blocks/Slickslider/Slickslider.scss
+++ b/src/components/3-Blocks/Slickslider/Slickslider.scss
@@ -11,7 +11,7 @@
   .slick-dots {
     bottom: -3rem;
 
-    > * {
+    >* {
       height: 2.4rem;
       width: 2.4rem;
       margin: 0 0.8rem;
@@ -29,7 +29,7 @@
   .slick-slide {
     height: $work-slider-width;
 
-    > * {
+    >* {
       height: 100%;
     }
   }
@@ -115,14 +115,18 @@
       bottom: -1rem;
     }
 
+    .slick-arrow {
+      position: absolute;
+      bottom: -4.8rem;
+      top: auto;
+    }
+
     .slick-next {
       right: 0;
-      margin: 9rem 0 0;
     }
 
     .slick-prev {
       left: 0;
-      margin: 9rem 0 0;
     }
   }
 }
